update to python3

--- a/hedm.bib
+++ b/hedm.bib
@@ -1,20 +1,25 @@
 @article{Bernier:2011uq,
-    author = {Bernier, Joel Vincent and Barton, Nathan Rhodes and Lienert, Ulrich and Miller, Matthew Peter},
+    author = {Bernier, Joel Vincent and Barton, Nathan Rhodes and
+                  Lienert, Ulrich and Miller, Matthew Peter},
     doi = {10.1177/0309324711405761},
     issn = {0309-3247},
     journal = {The Journal of Strain Analysis for Engineering Design},
-    keywords = {3DXRD,Strain tensor,Synchrotron radiation,X-ray diffraction (XRD)},
+    keywords = {3DXRD,Strain tensor,Synchrotron radiation,X-ray
+                  diffraction (XRD)},
     month = jul,
     number = {7},
     pages = {527--547},
-    title = {{Far-field high-energy diffraction microscopy: a tool for intergranular orientation and strain analysis}},
-    url = {http://sdj.sagepub.com/lookup/doi/10.1177/0309324711405761},
+    title = {{Far-field high-energy diffraction microscopy: a tool for
+                  intergranular orientation and strain analysis}},
+    url =
+                  {http://sdj.sagepub.com/lookup/doi/10.1177/0309324711405761},
     volume = {46},
     year = {2011}
 }
 
 @article{Edmiston2012,
-    abstract = {This article quantitatively reconciles crystallographic
+    abstract = {This article quantitatively reconciles
+                  crystallographic
                 and mechanics approaches to lattice refinement as
                 part of X-ray diffraction procedures. The
                 equivalence between the refinement based on
@@ -33,11 +38,14 @@
                 experimental mechanics communities, for studies
                 where X-ray diffraction data are the fundamental
                 measurement.},
-    author = {Edmiston, John K. and Bernier, Joel Vincent and Barton, Nathan Rhodes and Johnson, George C.},
+    author = {Edmiston, John K. and Bernier, Joel Vincent and Barton,
+                  Nathan Rhodes and Johnson, George C.},
     doi = {10.1107/S010876731105598X},
     issn = {1600-5724},
-    journal = {Acta crystallographica. Section A, Foundations of crystallography},
-    keywords = {3DXRD,HEDM,elastic deformation,finite strain,lattice refinement},
+    journal = {Acta crystallographica. Section A, Foundations of
+                  crystallography},
+    keywords = {3DXRD,HEDM,elastic deformation,finite strain,lattice
+                  refinement},
     mendeley-tags = {3DXRD,HEDM},
     month = mar,
     number = {Pt 2},
@@ -50,16 +58,21 @@
 }
 
 @article{Edmiston:2010qf,
-    author = {Edmiston, John K. and Barton, Nathan Rhodes and Bernier, Joel Vincent and Johnson, George C. and Steigmann, David J},
+    author = {Edmiston, John K. and Barton, Nathan Rhodes and Bernier,
+                  Joel Vincent and Johnson, George C. and Steigmann,
+                  David J},
     doi = {10.1107/S0021889811002123},
     issn = {0021-8898},
     journal = {Journal of Applied Crystallography},
-    keywords = {3DXRD,HEDM,X-ray diffraction,crystal lattice deformation,high energy,measurement uncertainties,orientation,strain},
+    keywords = {3DXRD,HEDM,X-ray diffraction,crystal lattice
+                  deformation,high energy,measurement
+                  uncertainties,orientation,strain},
     mendeley-tags = {3DXRD,HEDM},
     month = feb,
     number = {2},
     pages = {299--312},
-    title = {{Precision of lattice strain and orientation measurements using high-energy monochromatic X-ray diffraction}},
+    title = {{Precision of lattice strain and orientation measurements
+                  using high-energy monochromatic X-ray diffraction}},
     url = {http://scripts.iucr.org/cgi-bin/paper?S0021889811002123},
     volume = {44},
     year = {2011}
@@ -71,8 +84,10 @@
     isbn = {0198511655},
     pages = {352},
     publisher = {Oxford University Press},
-    title = {{Physical Properties of Crystals: Their Representation by Tensors and Matrices}},
-    url = {http://www.oup.com/us/catalog/general/subject/EarthSciences/Geology/?view=usa\&ci=9780198511656\#Product\_Details},
+    title = {{Physical Properties of Crystals: Their Representation by
+                  Tensors and Matrices}},
+    url =
+                  {http://www.oup.com/us/catalog/general/subject/EarthSciences/Geology/?view=usa\&ci=9780198511656\#Product\_Details},
     year = {1985}
 }
 
@@ -81,6 +96,31 @@
     Note = {Appendix B},
     Pages = {276--288},
     Publisher = {Oxford University Press},
-    Title = {Physical Properties of Crystals: Their Representation by Tensors and Matrices},
-    url = {http://www.oup.com/us/catalog/general/subject/EarthSciences/Geology/?view=usa\&ci=9780198511656\#Product\_Details},
+    Title = {Physical Properties of Crystals: Their Representation by
+                  Tensors and Matrices},
+    url =
+                  {http://www.oup.com/us/catalog/general/subject/EarthSciences/Geology/?view=usa\&ci=9780198511656\#Product\_Details},
     Year = {1985}}
+
+@article{Neustadt:a05876,
+    author = {Neustadt, R J and {Cagle Jnr}, F W and Waser, J},
+    doi = {10.1107/S0567739468000355},
+    file = {:Users/joel/Library/Application Support/Mendeley
+                      Desktop/Downloaded/Neustadt, Cagle Jnr, Waser - 1968
+                      - Vector algebra and the relations between direct
+                      and reciprocal lattice quantities.pdf:pdf},
+    issn = {05677394},
+    journal = {Acta Crystallographica Section A: Crystal Physics,
+                      Diffraction, Theoretical and General
+                      Crystallography},
+    keywords = {reciprocal lattice},
+    month = {jan},
+    number = {1},
+    pages = {247--248},
+    title = {{Vector algebra and the relations between direct and
+                      reciprocal lattice quantities}},
+    url = {http://dx.doi.org/10.1107/S0567739468000355
+                      http://scripts.iucr.org/cgi-bin/paper?S0567739468000355},
+    volume = {24},
+    year = {1968}
+}
